# dns_edit

./: Cargo.toml  README.md  ec2-remote.sh  kill-remote.fish  remote-aws-status.fish  remote.fish  start-ec2.sh  stop-ec2.sh
src/: main.rs  stdin.rs
tests/: cli_test.rs
