[package]
name = "dns_edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
regex = "1.10.3"
git2 = "0.18.2"
chrono = "0.4.34"
thiserror = "1.0.56"
