[package]
name = "dns_edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
regex = "1.10.3"
thiserror = "1.0.56"

[dev-dependencies]
tempfile = "3.10.1"
